# tinyself

./: README.md  Semantics.hs  Syntax.hs  tinyself.cabal
examples/: simple
src/: Interpreter.hs  Lexer.x  Main.hs  Name.hs  Parser.y  Syntax.hs  Util.hs
